--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1305,7 +1305,7 @@
         <script src="/assets/js/vendor/jquery.scrollTo-min.js"></script>
         <script src='/assets/js/vendor/jquery.parallax-1.1.3.js'></script>
 
-        <!-- widgets -->aㅁ
+        <!-- widgets -->
         <script src="/assets/js/vendor/jquery.easypiechart.min.js"></script><!-- pie charts -->
         <script src='/assets/js/vendor/jquery.countTo.js'></script><!-- digits counting -->
         <script src="/assets/js/vendor/jquery.prettyPhoto.js"></script><!-- lightbox photos -->
