--- a/app/views/home/index_orgnl.html.erb
+++ b/app/views/home/index_orgnl.html.erb
@@ -47,6 +47,7 @@
                     <p id="social" class="text-sm-right">
                         <a class="socialico-facebook" href="#" title="Facebook">#</a><a class="socialico-twitter" href="#" title="Twitter">#</a><a class="socialico-google" href="#" title="Google">#</a><a class="socialico-linkedin" href="#" title="LinkedIn">#</a><a class="socialico-dribble" href="#" title="Dribble">#</a>
                     </p>
+            
                 </div>
                     
                 
@@ -110,7 +111,7 @@
         
         <div id="mainslider_includes" class="container">
             <div class="row">
-                <div class="col-md-6 to_animate">
+                <!-- <div class="col-md-6 to_animate">
                     <div class="small_post">
                         <a class="media-left media-middle" href="blog-single-right.html">
                             <i class="rt-icon-pen2"></i>
@@ -130,7 +131,7 @@
                         </div>
                         
                     </div>
-                </div> 
+                </div> --
                 
                 <div class="col-md-6 to_animate">
                     <div id="gallery-small-carousel">
@@ -184,22 +185,126 @@
                         <ul id="mainmenu" class="nav sf-menu">
                             <li class="active">
                                 <a href="#box_wrapper"> 이슈하나 </a>
+                                <ul>
+                                    <li>
+                                        <a href="index.html">Index 1</a>
+                                    </li>
+                                    <li>
+                                        <a href="index2.html">Index 2</a>
+                                    </li>
+                                    <li>
+                                        <a href="index3.html">Index 3</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li>
-                                <a href="#folio"> 이슈두울</a>
+                                <a href="#folio">Folio</a>
                             </li>
                             <li>
-                                <a href="#blog"> 이슈세엣 </a>
+                                <a href="#blog">Blog</a>
                             </li>
                             <li>
-                                <a href="#features"> 이슈네엣 </a>
+                                <a href="#features">Features</a>
                             </li>
                             
                             <li>
-                                <a href="about.html"> 이슈다섯 </a>
+                                <a href="about.html">Pages</a>
+                                <ul>
+                                    <li>
+                                        <a href="about.html">About</a>
+                                    </li>
+                                    <li>
+                                        <a href="events.html">Events</a>
+                                        <ul>
+                                            <li>
+                                                <a href="events.html">Events</a>
+                                            </li>
+                                            <li>
+                                                <a href="event-single.html">Single Event</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="team-single.html">Team Member</a>
+                                    </li>
+                                    <li>
+                                        <a href="404.html">404</a>
+                                    </li>
+                                    <li>
+                                        <a href="gallery.html">Folio</a>
+                                        <ul>
+                                            <li>
+                                                <a href="gallery.html">Folio 1</a>
+                                            </li>
+                                            <li>
+                                                <a href="gallery2.html">Folio 2</a>
+                                            </li>
+                                            <li>
+                                                <a href="gallery3.html">Folio 3</a>
+                                            </li>
+                                            <li>
+                                                <a href="gallery-single.html">Single Item</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="blog-right.html">Blog</a>
+                                        <ul>
+                                            <li>
+                                                <a href="blog-right.html">Blog</a>
+                                                <ul>
+                                                    <li>
+                                                        <a href="blog-right.html">Blog With Right Sidebar</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="blog-left.html">Blog With Left Sidebar</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="blog-full.html">Blog Full Width</a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <a href="blog-grid.html">Blog Grid</a>
+                                            </li>
+                                            <li>
+                                                <a href="blog-single-right.html">Blog Post</a>
+                                                <ul>
+                                                    <li>
+                                                        <a href="blog-single-right.html">Post With Right Sidebar</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="blog-single-left.html">Post With Left Sidebar</a>
+                                                    </li>
+                                                     <li>
+                                                        <a href="blog-single-full.html">Post Full Width</a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="shortcodes.html">Features</a>
+                                        <ul>
+                                            <li>
+                                                <a href="shortcodes.html">Shortcodes&amp;Widgets</a>
+                                            </li>
+                                            <li>
+                                                <a href="animation.html">Animation</a>
+                                            </li>
+                                            <li>
+                                                <a href="icons.html">Icons</a>
+                                            </li>
+                                        </ul>
+                                    </li>                              
+                                    <li>
+                                        <a href="contact.html">Contact</a>
+                                    </li>
+
+                                </ul> 
                             </li>
                             <li>
-                                <a href="#contact"> 이슈여섯 </a>
+                                <a href="#contact">Contact</a>
                             </li>
                         </ul>  
                     </nav>
@@ -209,7 +314,7 @@
     </header>
 
     <!-- header toggler -->    
-    <!-- <span id="toggle_menu"><span></span></span> -->
+    <span id="toggle_menu"><span></span></span>
 
     <section id="features" class="light_section">
         <div class="container-fluid">
